--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "tailwindcss": "^3.4.15",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vite-plugin-sitemap": "^0.8.2"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
